updated search route test